# ChangeLog for net-misc/hamachi
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/hamachi/Attic/ChangeLog,v 1.4 2007/01/04 23:02:47 beandog Exp $

  04 Jan 2007; Steve Dibb <beandog@gentoo.org>
  hamachi-0.9.9.9_p20-r2.ebuild:
  ebuild cleanup, bug 156629

  29 Dec 2006; Peter Weller <welp@gentoo.org> hamachi-0.9.9.9_p20-r2.ebuild:
  Keyworded on amd64 wrt bug #159420

  06 Dec 2006; Caleb Tennis <caleb@gentoo.org>
  hamachi-0.9.9.9_p20-r2.ebuild:
  Fix minorsyn errors

*hamachi-0.9.9.9_p20-r2 (20 Sep 2006)

  20 Sep 2006; Caleb Tennis <caleb@gentoo.org> +files/hamachi.confd,
  +files/hamachi.initd, +files/tuncfg.confd, +files/tuncfg.initd,
  +metadata.xml, +hamachi-0.9.9.9_p20-r2.ebuild:
  Initial import, from bug #105386
