@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/hamachi
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/hamachi/Attic/ChangeLog,v 1.4 2007/01/04 23:02:47 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/hamachi/Attic/ChangeLog,v 1.5 2007/04/28 22:34:59 tove Exp $
+
+  28 Apr 2007; Torsten Veller <tove@gentoo.org>
+  hamachi-0.9.9.9_p20-r2.ebuild:
+  Fix *initd, *confd and *envd calls (#173884, #174266)
 
   04 Jan 2007; Steve Dibb <beandog@gentoo.org>
   hamachi-0.9.9.9_p20-r2.ebuild:
